config-web模块：初始增加配置中心管理首页